--- a/SisVentas/SisVentas.csproj
+++ b/SisVentas/SisVentas.csproj
@@ -105,14 +105,17 @@
     <Compile Include="Entidades\E_Productos.cs" />
     <Compile Include="Entidades\E_Provedores.cs" />
     <Compile Include="Entidades\E_Usuarios.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Presentacion\frm_Principal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Presentacion\frm_Principal.Designer.cs">
+      <DependentUpon>frm_Principal.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Presentacion\frm_Principal.resx">
+      <DependentUpon>frm_Principal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -136,8 +139,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Presentacion\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
