--- a/SisVentas/SisVentas.csproj
+++ b/SisVentas/SisVentas.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datos\Conexion.cs" />
+    <Compile Include="Datos\D_usuarios.cs" />
     <Compile Include="Entidades\E_Clientes.cs" />
     <Compile Include="Entidades\E_Empresas.cs" />
     <Compile Include="Entidades\E_Familias.cs" />
